# gaia

./: .bazelrc  BUILD  Cargo.toml  README.md  WORKSPACE  app.ts  cargo-bazel.lock.json  defs.bzl  esbuild.config.mjs  index.html  package.json  tsconfig.json  watch.sh
.github/: workflows
.github/workflows/: build.yaml
bundle/: BUILD  package.json
emsdk/: BUILD  emsdk.bzl
native-test/: BUILD  Cargo.toml
server/: BUILD  Cargo.toml
server/src/: main.rs
src/: lib.rs  projects.rs
src/blog/: mod.rs  post1.rs  syntaxhighlight.rs
static/: index.bzl.html
styles/: main.css
zig/: BUILD  zig.bzl
