[package]
name = "gaia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "server"]

[[bin]]
name = "app"

[dependencies]
wasm-bindgen = "0.2.81"
log = "0.4"
# yew = "0.19.3"
# yew-router = "0.16.0"
yew = { path = "../yew/packages/yew", features = ["hydration"] }
yew-router = { path = "../yew/packages/yew-router" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]